--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,3 @@
-
-
 {
     "name": "gabi/bienes-raices-php",
     "description": "creando un proyecto",
@@ -12,7 +10,8 @@
         }
     ],
     "require": {
-        "intervention/image": "^2.7"
+        "intervention/image": "^2.7",
+        "phpmailer/phpmailer": "^6.9"
     },
     "autoload":{
         "psr-4":{
